k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cicd.instantsummaries.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boardgame-ssvc
                port:
                  number: 80
